--- a/Python/environment.yml
+++ b/Python/environment.yml
@@ -13,6 +13,7 @@ dependencies:
 - pip:
   - cycler==0.10.0
   - glmnet==1.0.0
+  - easyml==1.0.0
   - matplotlib==1.5.3
   - numpy==1.11.2
   - pandas==0.19.0
